Adicionei as fotos

--- a/index.html
+++ b/index.html
@@ -18,10 +18,22 @@
         <h4 id="lacos-da-mari">Laços Da Mari</h4>
 
         <i class="material-icons">
-            email </i>
+            email  </i>
    </section>
+
+
    <section id="box1">
-        
+        <div id="part-fotos">
+          <div>
+              <img src="imagens/lacos0.jpg" width="155px">
+          </div>
+
+          <div>
+              <img src="imagens/tiara0.jpg" width="155px" >
+          </div>
+        </div>
+
+
    </section>
 </i>
 </body>
