--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 
    <section id="box1">
+       <p id="titulo">Se na vida há um embaraço, desate o nó e faça um laço!</p>
         <div id="part-fotos">
           <div>
               <img src="imagens/lacos0.jpg" width="155px">
@@ -33,7 +34,35 @@
           </div>
         </div>
 
+        <p id="subtitulo">Produto feito a mão, com muito amor.</p>
 
+        <div id="info">
+           <div id="info-lacos">
+               <img src="info/laco.png" width="70px" >
+               <p>Laços</p>
+           </div>
+
+           <div id="info-tiara">
+            <img src="info/tiara.png" width="70px">
+            <p>Tiaras</p>
+           </div>
+
+           <div id="info-redes">
+            <img src="info/redesocial.png" width="70px">
+            <p>Redes Sociais</p>
+           </div>
+            
+        </div>
+   </section>
+
+   <section id="box2">
+       <h3>Quem somos nois?</h3>
+      <div>
+        <h4>Olá!</h4> <p> Me chamo Maria.Somos uma marca  que produz laços, tiaras e muito mais... <br>
+        São todos feito a mão e por encomenda. <br> </p>
+
+        <div></div>
+      </div>
    </section>
 </i>
 </body>
