--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <i class="material-icons">
             menu</i>
 
-        <h4 id="lacos-da-mari">Laços Da Mari</h4>
+        <h5 id="lacos-da-mari">Laços Da Mari</h5>
 
         <i class="material-icons">
             email  </i>
@@ -38,24 +38,53 @@
 
         <div id="info">
            <div id="info-lacos">
-               <img src="info/laco.png" width="70px" >
+               <img src="info/laco.png" width="70px" style="background-color: #11daa1;">
                <p>Laços</p>
            </div>
 
            <div id="info-tiara">
-            <img src="info/tiara.png" width="70px">
+            <img src="info/tiara.png" width="70px" style="background-color:#f007cc;">
             <p>Tiaras</p>
            </div>
 
            <div id="info-redes">
-            <img src="info/redesocial.png" width="70px">
-            <p>Redes Sociais</p>
+            <img src="info/redesocial.png" width="70px" style="background-color: #edd918;">
+            <p>Redes <br> Sociais</p>
            </div>
-            
         </div>
+
+        
    </section>
 
-  
+   <section id="box2">
+       <h3>Quem somos nois?</h3>
+
+       <div id="texto">
+           <div id="texto2">
+           <h4>Olá!</h4>
+           <p>Meu nome é Maria. <br> Sou a enbaixadora da marca Laços Da Mari.
+           Nossa marca produz tiaras, laços e muito mais, são todos feitos a mão e a encomenda.</p>
+          </div>
+
+           <div class="sobre">
+               <img src="info/localizacao.png" width="40px">
+               <p>Se localizamos em <br> Bom - Jesus, PB.
+               </p>
+           </div>
+
+           <div class="sobre">
+            <img src="info/house.png" width="40px">
+            <p>Atualmente nossa marca <br> é local e residencial.
+            </p>
+          </div>
+
+          <div class="sobre">
+            <img src="info/entrega.png" width="40px">
+            <p>Fazemos entregas nas cidades <br> mais próximas.
+            </p>
+          </div>
+       </div>
+   </section>
 </i>
 </body>
 </html>
