--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> 
+    <script src="app.js"></script>
 
     <title>Document</title>
 </head>
@@ -25,11 +26,11 @@
    <section id="box1">
        <p id="titulo">Se na vida há um embaraço, desate o nó e faça um laço!</p>
         <div id="part-fotos">
-          <div>
+          <div id="img-Lacos">
               <img src="imagens/lacos0.jpg" width="155px">
           </div>
 
-          <div>
+          <div id="img-Tiara">
               <img src="imagens/tiara0.jpg" width="155px" >
           </div>
         </div>
@@ -52,8 +53,8 @@
             <p>Redes <br> Sociais</p>
            </div>
         </div>
-
         
+       
    </section>
 
    <section id="box2">
