--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Manrope&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> 
     <script src="app.js"></script>
@@ -35,7 +40,12 @@
           </div>
         </div>
 
-        <p id="subtitulo">Produto feito a mão, com muito amor.</p>
+        <a href="#"><div class="whats">
+            <h5>Encomende já o seu</h5>
+            <img src="info/whatsapp.png" width="26px">
+        </div> </a>
+
+        <p id="subtitulo">Produto feito a mão, com muito amor. </p>
 
         <div id="info">
            <div id="info-lacos">
@@ -63,7 +73,7 @@
        <div id="texto">
            <div id="texto2">
            <h4>Olá!</h4>
-           <p>Meu nome é Maria. <br> Sou a enbaixadora da marca Laços Da Mari.
+           <p>Meu nome é Maria. <br> Sou a embaixadora da marca Laços Da Mari.
            Nossa marca produz tiaras, laços e muito mais, são todos feitos a mão e a encomenda.</p>
           </div>
 
@@ -86,6 +96,6 @@
           </div>
        </div>
    </section>
-</i>
+
 </body>
 </html>
