--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
    <section id="box1">
        <p id="titulo">Se na vida há um embaraço, desate o nó e faça um laço!</p>
         <div id="part-fotos">
-          <div id="img-Lacos">
-              <img src="imagens/lacos0.jpg" width="155px">
+          <div >
+              <img id="img-Lacos"  width="155px">
           </div>
 
-          <div id="img-Tiara">
-              <img src="imagens/tiara0.jpg" width="155px" >
+          <div >
+              <img id="img-Tiara" width="155px" >
           </div>
         </div>
 
