--- a/index.html
+++ b/index.html
@@ -108,8 +108,25 @@
             <p>Redes <br> Sociais</p>
            </div>
         </div>
-        
-       
+   </section>
+
+   <section id="box1_2">
+       <img src="info/antes.png" width="30px">
+        <div id="tela">
+           <div id="tela1">
+               <img id="tela-foto" src="imagens/lacos0.jpg" width="140px">
+               <div id="dados">
+                   Valor: 30 Reais! <br>
+                   Quantidade: 4 Restantes <br>
+                   -------------
+               </div>
+           </div>
+
+           <div id="descricao">
+               Feito a mão com muito carinho e amor, bem confortavel e pronto para uso, encomende já a sua!
+           </div>
+        </div>
+       <img src="info/proximo.png" width="30px">
    </section>
 
    <section id="box2">
