--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
        <img src="info/antes.png" width="30px">
         <div id="tela">
            <div id="tela1">
-               <img id="tela-foto" src="imagens/lacos0.jpg" width="150px">
+               <img id="tela-foto" width="150px">
                <div id="dados">
-                   Valor: 30 Reais! <br>
+                  
                </div>
            </div>
 
