--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
            </div>
 
            <div id="descricao">
-               Feito a mão com muito carinho e amor, bem confortavel e pronto para uso, encomende já a sua!
+                 <button>Encomendar Agora</button>
            </div>
         </div>
        <img src="info/proximo.png" width="30px">
