--- a/index.html
+++ b/index.html
@@ -111,20 +111,18 @@
    </section>
 
    <section id="box1_2">
-       <img src="info/antes.png" width="30px">
+       <img src="info/antes.png" width="30px" onclick="Tela(0)">
         <div id="tela">
            <div id="tela1">
-               <img id="tela-foto" width="150px">
-               <div id="dados">
-                  
-               </div>
+               <img id="tela-foto" width="180px">
            </div>
 
            <div id="descricao">
                  <button>Encomendar Agora</button>
            </div>
         </div>
-       <img src="info/proximo.png" width="30px">
+       <img src="info/proximo.png" id="proximo"
+       width="30px" onclick="Tela(1)">
    </section>
 
    <section id="box2">
