--- a/index.html
+++ b/index.html
@@ -138,7 +138,25 @@
      </div>
     <img src="info/proximo.png" id="proximo"
     width="30px" onclick="Tela(3,'tiara')">
-</section>
+   </section>
+
+   <section id="redes-sociais">
+       <div id="redes">
+           <div id="whats">
+
+               <img src="info/whatsapp.png" width="60px">
+
+
+               <p>(88) 988273759</p>
+           </div>
+
+           <div id="inst">
+               <img src="info/instagram.png" width="60px">
+
+               <p>@laços_da_marii</p>
+           </div>
+       </div>
+   </section>
 
    <section id="box2">
        <h3>Quem somos nois?</h3>
