--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <p>Tiaras</p>
            </div>
 
-           <div id="info-redes">
+           <div id="info-redes" onclick="ChamaTelaRedes()">
             <img src="info/redesocial.png" width="70px" style="background-color: #edd918;">
             <p>Redes <br> Sociais</p>
            </div>
@@ -141,6 +141,7 @@
    </section>
 
    <section id="redes-sociais">
+    
        <div id="redes">
            <div id="whats">
 
