--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
    </section>
 
    <section id="redes-sociais">
-    
+        <p>Clique e entre em contato!</p>
        <div id="redes">
            <div id="whats">
 
