--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Manrope&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!--          <link rel="stylesheet"  media="screen and (min-width: 835px)" href="style.css">
+
+     <link rel="stylesheet"  media="screen and (max-width: 835px)" href="style_mobile.css">  -->
+
+    <!--<link rel="stylesheet" href="style.css"> -->
+
+    <link rel="stylesheet" href="style_pc.css">
+    
 
     <title>Document</title>
 </head>
