--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
    <!-- Essa section é a tela que aparecerá, quando for clicado no botão lacos, conf. inicialmente como none -->
    
    <section id="box1_2">
-       <img src="info/antes.png" width="30px" onclick="Tela(0,'laco')">
+       <img src="info/antes.png" class="setas" width="30px" onclick="Tela(0,'laco')">
         <div id="tela">
            <div id="tela1">
-               <img id="tela-foto" width="180px">
+               <img id="tela-foto"   width="180px">
            </div>
 
            <div id="descricao">
                  <button>Encomendar Agora</button>
            </div>
         </div>
-       <img src="info/proximo.png" id="proximo"
+       <img src="info/proximo.png" class="setas"  id="proximo"
        width="30px" onclick="Tela(1,'laco')">
    </section>
 
@@ -145,7 +145,7 @@
    <!-- Essa section é a tela que aparecerá, quando for clicado no botão tiara, conf. inicialmente como none -->
 
    <section id="box1_3">
-    <img src="info/antes.png" width="30px" onclick="Tela(2,'tiara')">
+    <img src="info/antes.png" class="setas" width="30px" onclick="Tela(2,'tiara')">
      <div id="tela_2">
         <div id="tela2">
             <img id="tela-foto2" width="180px">
@@ -155,7 +155,7 @@
               <button>Encomendar Agora</button>
         </div>
      </div>
-    <img src="info/proximo.png" id="proximo"
+    <img src="info/proximo.png" class="setas"  id="proximo"
     width="30px" onclick="Tela(3,'tiara')">
    </section>
 
