--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
            </div>
         </div>
    </section>
+ <!--  
+   <div id="aviso">
+    <h3>Vire o celular na horizontal!</h3>
+    <img src="info/telefone.png" width="100px">
+    <p> O jogo só funcionará corretamente se o celular estiver na horizontal! </p>
+ </div>  -->
    
    <!-- Essa section é a tela que aparecerá, quando for clicado no botão lacos, conf. inicialmente como none -->
    
