--- a/index.html
+++ b/index.html
@@ -66,13 +66,6 @@
                 </div>
             </li>
 
-            <li>
-              <div>
-                <img src="info/configuracao.png" width="30px"> 
-                <p>
-                Configuração </p>
-            </div>
-            </li>
 
             <li>
               <div>
@@ -172,7 +165,8 @@
    <section id="redes-sociais">
         <p>Clique e entre em contato!</p>
        <div id="redes">
-         
+
+        <a href=" https://linkwpp.com/w/JGHb9ViB">
            <div id="whats">
 
                <img src="info/whatsapp.png" width="60px">
@@ -181,7 +175,7 @@
                <p>  <a href=" https://linkwpp.com/w/JGHb9ViB">(83) 981294425 </a></p>
            </div>
            
-           <a href=" https://linkwpp.com/w/JGHb9ViB">
+           <a  href=" https://www.instagram.com/lacos_da_marii_/">
            <div id="inst" >  
 
                <img src="info/instagram.png" width="60px">
