--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet"  media="screen and (min-width: 960px)" href="style_pc.css">
 
-     <link rel="stylesheet"  media="screen and (max-width: 960px)" href="style.css">  
+     <link rel="stylesheet"  media="screen and (max-width: 660px)" href="style.css">  
 
     <!--<link rel="stylesheet" href="style.css"> 
 
@@ -193,8 +193,8 @@
        <div id="texto">
            <div id="texto2">
            <h4>Olá!</h4>
-           <p>Meu nome é Maria. <br> Sou a embaixadora da marca Laços Da Mari.
-           Nossa marca produz tiaras, laços e muito mais, são todos feitos a mão e a encomenda.</p>
+           <p>Meu nome é Maria. <br> Sou a criadora da marca "Laços Da Mari".
+           Nossa marca produz tiaras, laços e muito mais, são todos feitos a mão e a encomenda. Estamos sempre a serviço e pronto para lhe atender!</p>
           </div>
 
            <div class="sobre">
