--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet"  media="screen and (min-width: 960px)" href="style_pc.css">
 
-     <link rel="stylesheet"  media="screen and (max-width: 660px)" href="style.css">  
+     <link rel="stylesheet"  media="screen and (max-width: 960px)" href="style.css">  
 
     <!--<link rel="stylesheet" href="style.css"> 
 
@@ -117,12 +117,12 @@
            </div>
         </div>
    </section>
- <!--  
+   
    <div id="aviso">
-    <h3>Vire o celular na horizontal!</h3>
+    <h3>Olá,a tela do seu celular é pequena para acessar a essa pagina na vertical. Por favor, vire seu celular na horizontal</h3>
     <img src="info/telefone.png" width="100px">
-    <p> O jogo só funcionará corretamente se o celular estiver na horizontal! </p>
- </div>  -->
+    <h4> Vire o celular na horizontal!</h4>
+ </div>  
    
    <!-- Essa section é a tela que aparecerá, quando for clicado no botão lacos, conf. inicialmente como none -->
    
