--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style_pc.css"> -->
     
 
-    <title>Document</title>
+    <title> Laços Da Mari </title>
 </head>
 <body>
        
