--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <h5 id="lacos-da-mari">Laços Da Mari</h5>
 
-        <i class="material-icons" id="email">
-       <a href="https://linkwpp.com/w/JGHb9ViB">email</a> </i>
+        <i class="material-icons" id="email"> 
+        <a href="#"> email </a></i>
    </section>
 
    <!-- Essa section abaixo, é o menu que aparecerá quando clicar no icone do menu -->
@@ -62,7 +62,7 @@
                   <div>
                   <img src="info/atendimento.png" width="30px">
                   <p>
-                 <a href="https://linkwpp.com/w/JGHb9ViB"> Entrar Em Contato</a> </p>
+                 <a href="#"> Entrar Em Contato</a> </p>
                 </div>
             </li>
 
@@ -93,7 +93,7 @@
           </div>
         </div>
 
-        <a href="https://linkwpp.com/w/JGHb9ViB"><div class="whats">
+        <a href="#"><div class="whats">
             <h5>Encomende já o seu</h5>
             <img src="info/whatsapp.png" width="26px">
         </div> </a>
@@ -136,7 +136,7 @@
            <div id="tela1">
                <img id="tela-foto"   width="180px">
            </div>
-           <a href="https://linkwpp.com/w/JGHb9ViB">
+           <a href="#">
            <div id="descricao">
                  <button>Encomendar Agora</button>
            </div> </a>
@@ -154,7 +154,7 @@
         <div id="tela2">
             <img id="tela-foto2" width="180px">
         </div>
-        <a href="https://linkwpp.com/w/JGHb9ViB">
+        <a href="#">
         <div id="descricao2">
               <button>Encomendar Agora </button>
         </div> </a>
@@ -170,21 +170,21 @@
         <p>Clique e entre em contato!</p>
        <div id="redes">
 
-        <a href=" https://linkwpp.com/w/JGHb9ViB">
+        <a href="#">
            <div id="whats">
 
                <img src="info/whatsapp.png" width="60px">
 
 
-               <p>  <a href=" https://linkwpp.com/w/JGHb9ViB">(83) 981294425 </a></p>
+               <p>  <a href="#">(83) 981294425 </a></p>
            </div>
            
-           <a  href=" https://www.instagram.com/lacos_da_marii_/">
+           <a  href="#">
            <div id="inst" >  
 
                <img src="info/instagram.png" width="60px">
 
-               <p>  <a href=" https://www.instagram.com/lacos_da_marii_/">@laços_da_marii</a></p>
+               <p><a href="#">@laços_da_marii</a></p>
                        </div>
         </a>
        </div>
